# arb-pulse

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  config.toml  docker-compose.yml  pool-registry-config.toml
.claude/agents/: agent-broadcaster.md  agent-infra.md  agent-listener.md  agent-opportunity-finder.md  agent-pool-registry.md  team-lead.md
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ArbExecutor.sol  FotDetector.sol
contracts/src/interfaces/: IArbInterfaces.sol
crates/arb-api/: Cargo.toml
crates/arb-api/src/: db.rs  main.rs
crates/listener/: Cargo.toml
crates/listener/src/: api.rs  config.rs  main.rs  mempool.rs  registry_client.rs  sink.rs  store.rs  types.rs
crates/listener/src/listener/: init.rs  mod.rs  ws.rs
crates/listener/src/protocols/: mod.rs  uniswap_v2.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/opportunity-finder/: Cargo.toml  DESIGN.md
crates/opportunity-finder/src/: amm.rs  config.rs  db.rs  emitter.rs  finder.rs  graph.rs  main.rs  source.rs  store.rs  types.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: db.rs  health.rs  main.rs  supervisor.rs
crates/pool-registry/: Cargo.toml
crates/pool-registry/migrations/: 0001_init.sql  0002_add_tokens.sql  0003_token_price.sql  0004_token_price_text_columns.sql  0005_token_metadata.sql  0006_price_sources.sql  0007_arb_history.sql  0008_fot_flag.sql  0009_meme_flag.sql  0010_token_metadata_stubs.sql  0011_token_metadata_fetched_at.sql  0012_transfer_fee_bps.sql
crates/pool-registry/src/: chain_seeder.rs  config.rs  db.rs  fot_screener.rs  lib.rs  main.rs  meme_screener.rs  price.rs  price_updater.rs  reserve_fetcher.rs  token_metadata.rs  tvl_worker.rs
crates/pool-registry/src/api/: mod.rs  routes.rs
crates/transaction-broadcaster/: Cargo.toml
crates/transaction-broadcaster/src/: abi.rs  broadcaster.rs  config.rs  db.rs  main.rs  nonce.rs  types.rs
docs/: pulsechain-checkpoint-sync.md  pulsechain-node-hardware-requirements.md  pulsechain-websocket.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: health.json  latency.json  pools.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
scripts/: agent-broadcaster.sh  agent-contract.sh  agent-infra.sh  agent-listener.sh  agent-opportunity-finder.sh  agent-pool-registry-all.sh  agent-pool-registry-metadata.sh  agent-pool-registry-price.sh  agent-pool-registry-tvl.sh  agent-pool-registry.sh  agent-web.sh  common.sh  start-all.sh  status.sh  stop-all.sh  verify_opp_297.py  verify_opps.py
scripts/fot/: detector.bytecode  detector.runtime  fot_tokens.txt  inconclusive_tokens.txt  probe.py  probe.sh  results.tsv  run88.py  run_batch.py  transfer_failed_tokens.txt  worklist.txt  worklist88.raw
web/: package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/tokens/: page.tsx
web/src/app/tokens/[address]/: page.tsx
web/src/lib/: api.ts
web/src/types/: token.ts
