[package]
name = "arb-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arb-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
