[package]
name = "listener"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "listener"
path = "src/main.rs"

[dependencies]
# Ethereum / blockchain
alloy = { version = "2.0", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# State output (PathFinder consumer)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Concurrency
dashmap = "6"

# HTTP API (server)
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Per-protocol trait (async methods in a trait object)
async-trait = "0.1"

# HTTP client for price oracle
reqwest = { version = "0.12", features = ["json"] }
