[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
