[package]
name = "pool-registry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pool-registry"
path = "src/main.rs"

[dependencies]
# Blockchain (pair enumeration directly from chain)
alloy = { version = "2.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate", "chrono"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP API (server)
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (calling listener + DexScreener)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Prometheus metrics
arb-metrics = { path = "../metrics" }
metrics = "0.24"
