[package]
name = "transaction-broadcaster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transaction-broadcaster"
path = "src/main.rs"

[dependencies]
# Ethereum: provider, signer, ABI encoding
alloy = { version = "2.0", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Opportunity input (from opportunity-finder)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"

# Database persistence
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
chrono = "0.4"
